--- a/css/style.css
+++ b/css/style.css
@@ -44,15 +44,19 @@ img {
   width: 25px;
 }
 
+.inlineBlock {
+  width: 100%;
+}
+
 .subdomain {
-  float: left;
-  text-align: center;
-  height: 3em;
+  display: inline-block;
   width: 47.5%;
-  line-height: 3em;
-  background-color: #000;
+  height: 3em;
   margin-top: 5%;
   margin-bottom: 5%;
+  background-color: #000;
+  line-height: 3em;
+  text-align: center;
   color: #fff;
 }
 
